fixed bugs with sidebar and scrollbar

--- a/src/styles/categoryMobile.module.scss
+++ b/src/styles/categoryMobile.module.scss
@@ -25,7 +25,7 @@
         gap: 10px;
         margin-top: 30px;
         overflow-x: auto; 
-        scrollbar-width: none; 
+        scrollbar-width: none;
         -webkit-overflow-scrolling: touch; 
         white-space: nowrap; 
     }
@@ -33,6 +33,10 @@
     .category_container::-webkit-scrollbar {
         height: 8px; 
     }
+
+    .category_container::-webkit-scrollbar {
+        display: none;
+    }    
     
     .category_container::-webkit-scrollbar-track {
         background: none; 
@@ -41,7 +45,6 @@
     .category_container::-webkit-scrollbar-thumb {
         background-color: none; 
         border-radius: 20px; 
-        border: 2px solid #e0e0e0; 
     }
     
     .category{
